src/Common Files/frames.h

//Series.cpp
    void FRAMES_API AddSeries(int Num1, double *Times1, double *Values1,
                                int Num2, double *Times2, double *Values2,
                                int *NumRes, double *TimesRes, double *ValuesRes);
     int FRAMES_API GetProbability(int zeroes, int resolution, int count,
                                     double *intimes, double *invalues,
                                     double *minY, double *maxY,
                                     int *xBegIdx, int *xEndIdx,
                                     double *sprob, double *svalue);
// 1 based, all indices start at 1 for SCF/WFF/WCF/AFF/BBF
// 0 based, all indices start at 0 for ATO/EPF/RIF/HIF

    //SCFClass.cpp
    void FRAMES_API scfOpen(char *fuiname, char *modId);
    void FRAMES_API scfClose();
     int FRAMES_API scfGetNumSets();
     int FRAMES_API scfGetNumContam(int dsIdx);
     int FRAMES_API scfGetNumProgeny(int dsIdx, int conIdx);
     int FRAMES_API scfGetContamName(int dsIdx, int conIdx, int progIdx, char *name, char *cas);
     int FRAMES_API scfGetSeriesProperties(int dsIdx, int conIdx, int progIdx, char *vUnits, char *tUnits);
     int FRAMES_API scfGetSeriesValues(int dsIdx, int conIdx, int progIdx, int count, double *times, double *values);
    //AFFClass.cpp
    void FRAMES_API affOpen(char *fuiname, char *modId);
    void FRAMES_API affClose();
     int FRAMES_API affGetNumSets();
     int FRAMES_API affGetNumFluxTypes(int dsIdx);
     int FRAMES_API affGetFluxType(int dsIdx, int fluxIdx, char *type, double *size, char *sunt, double *density, char *dunt);
     int FRAMES_API affGetNumContam(int dsIdx);
     int FRAMES_API affGetNumProgeny(int dsIdx, int conIdx);
     int FRAMES_API affGetSeriesValues(int dsIdx, int conIdx, int progIdx, int fluxIdx, int count, double *times, double *values);
     int FRAMES_API affGetContamName(int dsIdx, int conIdx, int progIdx, char *name, char *cas);
     int FRAMES_API affGetSeriesProperties(int dsIdx, int conIdx, int progIdx, char *vUnits, char *tUnits);
    //WFFClass.cpp
    void FRAMES_API wffOpen(char *fuiname, char *modId);
    void FRAMES_API wffClose();
     int FRAMES_API wffGetNumContam(int dsIdx);
     int FRAMES_API wffGetNumProgeny(int dsIdx, int conIdx);
     int FRAMES_API wffGetSeriesValues(int dsIdx, int conIdx, int progIdx, int fluxIdx, int count, double *times, double *values);
     int FRAMES_API wffGetSeriesValuesSum(int dsIdx, int conIdx, int progIdx, int count, double *times, double *values);
     int FRAMES_API wffGetContamName(int dsIdx, int conIdx, int progIdx, char *name, char *cas);
     int FRAMES_API wffGetSeriesProperties(int dsIdx, int conIdx, int progIdx, char *vUnits, char *tUnits);
    //WCFClass.cpp
    void FRAMES_API wcfOpen(char *fuiname, char *modId);
    void FRAMES_API wcfClose();
     int FRAMES_API wcfGetNumContam(int dsIdx);
     int FRAMES_API wcfGetNumProgeny(int dsIdx, int conIdx);
     int FRAMES_API wcfGetContamName(int dsIdx, int conIdx, int progIdx, char *name, char *cas);
     int FRAMES_API wcfGetSeriesValues(int dsIdx, int conIdx, int progIdx, int count, double *times, double *values);
     int FRAMES_API wcfGetSeriesProperties(int dsIdx, int conIdx, int progIdx, char *vUnits, char *tUnits);
    //ATOClass.cpp
    void FRAMES_API atoOpen(char *fuiname, char *modId);
    void FRAMES_API atoClose() ;
     int FRAMES_API atoGetDatasetCount();
     int FRAMES_API atoGetConstituentCount(int dsIdx);
    void FRAMES_API atoGetDatasetName(int dsIdx, char *name);
    void FRAMES_API atoGetDatasetModname(int dsIdx, char *name);
    void FRAMES_API atoGetCoordinateType(int dsIdx, char *name);
    void FRAMES_API atoGetReleaseType(int dsIdx, char *name);
    void FRAMES_API atoGetSpatialType(int dsIdx, char *name);
         //---------- ATO flux calls -------------------
    void FRAMES_API atoGetFluxType(int dsIdx, int fluxIdx, char *name);
  double FRAMES_API atoGetFluxRadius(int dsIdx, int fluxIdx);
    void FRAMES_API atoGetFluxRadiusUnits(int dsIdx, int fluxIdx, char *name);
    void FRAMES_API atoGetFluxDensityUnits(int dsIdx, int fluxIdx, char *name);
         //---------- ATO constituent (and Progeny) calls --------------
    void FRAMES_API atoGetCasID(int dsIdx, int conIdx, int progIdx, char *name);
    void FRAMES_API atoGetChemName(int dsIdx, int conIdx, int progIdx, char *name);
    void FRAMES_API atoGetParentCasID(int dsIdx, int conIdx, int progIdx, char *name);
    void FRAMES_API atoGetParentChemName(int dsIdx, int conIdx, int progIdx, char *name);
     int FRAMES_API atoGetProgenyCount(int dsIdx, int conIdx);
         //---------- ATO time period calls ------------------
     int FRAMES_API atoGetTimePeriodCount(int dsIdx, int conIdx, int progIdx);
     int FRAMES_API atoGetTimePeriodOutputCount(int dsIdx, int conIdx, int progIdx, int timeIdx);
    void FRAMES_API atoGetTimePeriodUnit(int dsIdx, int conIdx, int progIdx, int timeIdx, char *name);
  double FRAMES_API atoGetTimePeriodTime(int dsIdx, int conIdx, int progIdx, int timeIdx);
         //---------- ATO grid calls -------------------------
    void FRAMES_API atoGetGridAxis1Unit(int dsIdx, int conIdx, int progIdx, int timeIdx, int gridID, char *name);
    void FRAMES_API atoGetGridAxis2Unit(int dsIdx, int conIdx, int progIdx, int timeIdx, int gridID, char *name);
    void FRAMES_API atoGetGridDataUnit(int dsIdx, int conIdx, int progIdx, int timeIdx, int gridID, char *name);