Common Files/oldFrames.bas


'//-------------------------------------------
'//----------- MISC. calls -------------------
'//-------------------------------------------
Public Declare Sub AddSeries Lib "Frames" (ByVal Num1 As Integer, ByRef Times1 As Single, ByRef Values1 As Single, ByVal Num2 As Long, ByRef Times2 As Single, ByRef Values2 As Single, ByRef NumRes As Long, ByRef TimesRes As Single, ByRef ValuesRes As Single)
Public Declare Sub GetProbability Lib "Frames" (ByVal x As Long, ByVal y As Long, ByVal count As Long, ByRef intimes As Single, ByRef invalues As Single, ByRef minval As Single, ByRef maxval As Single, ByRef timestart As Single, ByRef timeend As Single, ByRef svalue As Single, ByRef sprob As Single)
Public Declare Sub GetProbabilityRAGS Lib "Frames" (ByVal zeroes As Long, ByVal count As Long, ByRef intimes As Single, ByRef invalues As Single, ByRef attrib As Single, ByRef sprob As Single, ByRef svalue As Single)
'//-------------------------------------------
'//----------- AFF calls ---------------------
'//-------------------------------------------
Public Declare Sub affOpen Lib "Frames" (ByVal fname As String, ByVal Source As String)
Public Declare Sub affClose Lib "Frames" ()
Public Declare Function affGetNumSets Lib "Frames" () As Long
Public Declare Function affGetNumFluxTypes Lib "Frames" (ByVal nset As Long) As Long
Public Declare Function affGetNumContam Lib "Frames" (ByVal nset As Long) As Long
Public Declare Function affGetNumProgeny Lib "Frames" (ByVal nset As Long, ByVal ncon As Long) As Long
Public Declare Function affGetFlux Lib "Frames" (ByVal nset As Long, ByVal cont As Long, ByVal pt As Long) As Double
Public Declare Function affGetSeriesValues Lib "Frames" (ByVal nset As Long, ByVal ncon As Long, ByVal nprog As Long, ByVal ntype As Long, ByVal count As Long, ByRef times As Single, ByRef values As Single) As Long
Public Declare Function DLLaffGetSetName Lib "Frames" Alias "affGetSetName" (ByVal nset As Long, ByVal name As String) As Long
Public Declare Function DLLaffGetFluxType Lib "Frames" Alias "affGetFluxType" (ByVal nset As Long, ByVal nFlux As Long, ByVal ftype As String, ByRef fsize As Single, ByVal uom As String) As Long
Public Declare Function DLLaffGetContamName Lib "Frames" Alias "affGetContamName" (ByVal nset As Long, ByVal ncon As Long, ByVal nprog As Long, ByVal name As String, ByVal cas As String) As Long
Public Declare Function DLLaffGetSeriesProperties Lib "Frames" Alias "affGetSeriesProperties" (ByVal nset As Long, ByVal ncon As Long, ByVal nprog As Long, ByVal ntype As Long, ByVal units As String, ByVal timeunits As String) As Long
'//-------------------------------------------
'//----------- WFF calls ---------------------
'//-------------------------------------------
Public Declare Sub wffOpen Lib "Frames" (ByVal fname As String, ByVal Source As String)
Public Declare Sub wffClose Lib "Frames" ()
Public Declare Function wffGetFlux Lib "Frames" (ByVal media As Long, ByVal cont As Long, ByVal pt As Long) As Double
Public Declare Function wffGetNumMedia Lib "Frames" () As Long
Public Declare Function wffGetNumContam Lib "Frames" (ByVal nMed As Long) As Long
Public Declare Function wffGetNumProgeny Lib "Frames" (ByVal nMed As Long, ByVal ncon As Long) As Long
Public Declare Function wffGetConc Lib "Frames" (ByVal loc As Long, ByVal cont As Long, ByVal pt As Long) As Double
Public Declare Function wffGetSeriesValues Lib "Frames" (ByVal nMed As Long, ByVal ncon As Long, ByVal nprog As Long, ByVal count As Long, ByRef times As Single, ByRef values As Single) As Long
Public Declare Function wffGetMediaDimensions Lib "Frames" (ByVal nMed As Long, ByRef width As Single, ByRef length As Single, ByRef dist As Single, ByRef recharge As Single) As Long
'Public Declare Function wffGetSeriesValuesSum Lib "Frames" (ByVal nmed as Long, ByVal ncon as Long, ByVal nprog as Long, ByVal count as Long, float *times, float *values) as Long
Public Declare Function DLLwffGetMedia Lib "Frames" Alias "wffGetMedia" (ByVal nMed As Long, ByVal name As String) As Long
Public Declare Function DLLwffGetContamName Lib "Frames" Alias "wffGetContamName" (ByVal nMed As Long, ByVal ncon As Long, ByVal nprog As Long, ByVal name As String, ByVal cas As String) As Long
Public Declare Function DLLwffGetSeriesProperties Lib "Frames" Alias "wffGetSeriesProperties" (ByVal nMed As Long, ByVal ncon As Long, ByVal nprog As Long, ByVal units As String, ByVal timeunits As String) As Long
'//-------------------------------------------
'//----------- WCF calls ---------------------
'//-------------------------------------------
Public Declare Sub wcfOpen Lib "Frames" (ByVal fname As String, ByVal Source As String)
Public Declare Sub wcfClose Lib "Frames" ()
'  void   _export _stdcall wcfInit();
'  void   _export _stdcall wcfDelete();
'  void   _export _stdcall wcfWrite(char *tmpname);
'  void   _export _stdcall wcfSetNumLoc(int nloc);
'  void   _export _stdcall wcfSetLocation(int nloc, char *lname, char *ltype);
'  void   _export _stdcall wcfSetNumCon(int nloc, int ncon);
'  void   _export _stdcall wcfSetContaminant(int nloc, int ncon, char *cname, char *cas, int nprog);
'  void   _export _stdcall wcfSetSeriesCount(int nloc, int ncon, int nc);
'  void   _export _stdcall wcfSetSeriesValue(int nloc, int ncon, int n, double time, double value);
Public Declare Function wcfGetNumLoc Lib "Frames" () As Long
Public Declare Function wcfGetNumContam Lib "Frames" (ByVal nLoc As Long) As Long
Public Declare Function wcfGetNumProgeny Lib "Frames" (ByVal nLoc As Long, ByVal ncon As Long) As Long
Public Declare Function wcfGetSeriesValues Lib "Frames" (ByVal nLoc As Long, ByVal ncon As Long, ByVal nprog As Long, ByVal count As Long, ByRef times As Single, ByRef values As Single) As Long
Public Declare Function DLLwcfGetLocName Lib "Frames" Alias "wcfGetLocName" (ByVal nLoc As Long, ByVal name As String, ByVal ltype As String) As Long
Public Declare Function DLLwcfGetContamName Lib "Frames" Alias "wcfGetContamName" (ByVal nLoc As Long, ByVal ncon As Long, ByVal nprog As Long, ByVal name As String, ByVal cas As String) As Long
Public Declare Function DLLwcfGetSeriesProperties Lib "Frames" Alias "wcfGetSeriesProperties" (ByVal nLoc As Long, ByVal ncon As Long, ByVal nprog As Long, ByVal units As String, ByVal timeunits As String) As Long
'//-------------------------------------------
'//----------- SCF calls ---------------------
'//-------------------------------------------
Public Declare Sub scfOpen Lib "Frames" (ByVal fname As String, ByVal Source As String)
Public Declare Sub scfClose Lib "Frames" ()
Public Declare Function scfGetNumSets Lib "Frames" () As Long
Public Declare Function scfGetNumLoc Lib "Frames" (ByVal nset As Long) As Long
Public Declare Function scfGetNumContam Lib "Frames" (ByVal nset As Long, ByVal nLoc As Long) As Long
Public Declare Function scfGetNumProgeny Lib "Frames" (ByVal nset As Long, ByVal nLoc As Long, ByVal ncon As Long) As Long
Public Declare Function DLLscfGetSetName Lib "Frames" Alias "scfGetSetName" (ByVal nset As Long, ByVal name As String, ByVal ltype As String) As Long
Public Declare Function DLLscfGetLocName Lib "Frames" Alias "scfGetLocName" (ByVal nset As Long, ByVal nLoc As Long, ByVal name As String) As Long
Public Declare Function DLLscfGetContamName Lib "Frames" Alias "scfGetContamName" (ByVal nset As Long, ByVal nLoc As Long, ByVal ncon As Long, ByVal nprog As Long, ByVal name As String, ByVal cas As String) As Long
Public Declare Function DLLscfGetSeriesProperties Lib "Frames" Alias "scfGetSeriesProperties" (ByVal nset As Long, ByVal nLoc As Long, ByVal ncon As Long, ByVal nprog As Long, ByVal units As String, ByVal timeunits As String) As Long
Public Declare Function scfGetSeriesValues Lib "Frames" (ByVal nset As Long, ByVal nLoc As Long, ByVal ncon As Long, ByVal nprog As Long, ByVal count As Long, ByRef times As Single, ByRef values As Single) As Long
'//-------------------------------------------
'//----------- ATO calls ---------------------
'//-------------------------------------------
Public Declare Sub atoOpen Lib "Frames" (ByVal FUIName As String, ByVal Source As String)
Public Declare Sub atoClose Lib "Frames" ()
Public Declare Function atoGetDatasetCount Lib "Frames" () As Long
Public Declare Function atoGetConstituentCount Lib "Frames" (ByVal dsIndex As Long) As Long
Public Declare Function atoGetFluxCount Lib "Frames" (ByVal dsIndex As Long) As Long
Public Declare Sub DLLatoGetDatasetName Lib "Frames" Alias "atoGetDatasetName" (ByVal dsIndex As Long, ByVal name As String)
Public Declare Sub DLLatoGetDatasetModname Lib "Frames" Alias "atoGetDatasetModname" (ByVal dsIndex As Long, ByVal name As String)
Public Declare Sub DLLatoGetCoordinateType Lib "Frames" Alias "atoGetCoordinateType" (ByVal dsIndex As Long, ByVal name As String)
Public Declare Sub DLLatoGetReleaseType Lib "Frames" Alias "atoGetReleaseType" (ByVal dsIndex As Long, ByVal name As String)
Public Declare Sub DLLatoGetSpatialType Lib "Frames" Alias "atoGetSpatialType" (ByVal dsIndex As Long, ByVal name As String)
'//----------- ATO flux calls ----------------
Public Declare Sub DLLatoGetFluxType Lib "Frames" Alias "atoGetFluxType" (ByVal dsIndex As Long, ByVal fluxIndex As Long, ByVal name As String)
Public Declare Sub DLLatoGetFluxRadiusUnits Lib "Frames" Alias "atoGetFluxRadiusUnits" (ByVal dsIndex As Long, ByVal fluxIndex As Long, ByVal name As String)
Public Declare Sub DLLatoGetFluxDensityUnits Lib "Frames" Alias "atoGetFluxDensityUnits" (ByVal dsIndex As Long, ByVal fluxIndex As Long, ByVal name As String)
Public Declare Function atoGetFluxRadius Lib "Frames" (ByVal dsIndex As Long, ByVal fluxIndex As Long) As Double
'//----------- ATO constituent calls ---------
Public Declare Sub DLLatoGetCasID Lib "Frames" Alias "atoGetCasID" (ByVal dsIndex As Long, ByVal constituentID As Long, ByVal progID As Long, ByVal name As String)
Public Declare Sub DLLatoGetChemName Lib "Frames" Alias "atoGetChemName" (ByVal dsIndex As Long, ByVal constituentID As Long, ByVal progID As Long, ByVal name As String)
Public Declare Sub DLLatoGetParentCasID Lib "Frames" Alias "atoGetParentCasID" (ByVal dsIndex As Long, ByVal constID As Long, ByVal progID As Long, ByVal name As String)
Public Declare Sub DLLatoGetParentChemName Lib "Frames" Alias "atoGetParentChemName" (ByVal dsIndex As Long, ByVal constID As Long, ByVal progID As Long, ByVal name As String)
Public Declare Function atoGetProgenyCount Lib "Frames" (ByVal dsIndex As Long, ByVal constituentID As Long) As Long
'//----------- ATO time period calls ----------
Public Declare Sub DLLatoGetTimePeriodUnit Lib "Frames" Alias "atoGetTimePeriodUnit" (ByVal dsIndex As Long, ByVal constID As Long, ByVal progID As Long, ByVal timeID As Long, ByVal name As String)
Public Declare Function atoGetTimePeriodCount Lib "Frames" (ByVal dsIndex As Long, ByVal constID As Long, ByVal progID As Long) As Long
Public Declare Function atoGetTimePeriodOutputCount Lib "Frames" (ByVal dsIndex As Long, ByVal constID As Long, ByVal progID As Long, ByVal timeID As Long) As Long
Public Declare Function atoGetTimePeriodTime Lib "Frames" (ByVal dsIndex As Long, ByVal constID As Long, ByVal progID As Long, ByVal timeID As Long) As Double
'//----------- ATO grid calls ----------------
Public Declare Sub DLLatoGetGridAxis1Unit Lib "Frames" Alias "atoGetGridAxis1Unit" (ByVal dsIndex As Long, ByVal constID As Long, ByVal progID As Long, ByVal timeID As Long, ByVal gridID As Long, ByVal name As String)
Public Declare Sub DLLatoGetGridAxis2Unit Lib "Frames" Alias "atoGetGridAxis2Unit" (ByVal dsIndex As Long, ByVal constID As Long, ByVal progID As Long, ByVal timeID As Long, ByVal gridID As Long, ByVal name As String)
Public Declare Sub DLLatoGetGridDataUnit Lib "Frames" Alias "atoGetGridDataUnit" (ByVal dsIndex As Long, ByVal constID As Long, ByVal progID As Long, ByVal timeID As Long, ByVal gridID As Long, ByVal name As String)
